<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="sms_messaging">SMS Messaging</string>
    <string name="settings">Settings</string>
    <string name="welcome">Dashboard</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="todays_date">Today&apos;s Date</string>
    <string name="todays_weight">Today&apos;s Weight</string>
    <string name="name">Name</string>
    <string name="app_settings">App Settings</string>
    <string name="username">Username</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="welcome2">Welcome back</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="login">Log In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="settings1">Settings</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="scale_image">Weight tracker scale image</string>
    <string name="title_activity_main3">Settings</string>
    <string name="current_date">June 22, 2026</string>
    <string name="updated_today">Updated June 22, 2026</string>
    <string name="login_subtitle">A supportive space to log progress, set goals, and celebrate healthy consistency.</string>
    <string name="welcome_note">Log in or create a new profile to begin tracking.</string>
    <string name="privacy_note">Password text is obscured for privacy. Project Three will connect these fields to the database.</string>
    <string name="dashboard_subtitle">Record today&apos;s weight entry and manage saved progress.</string>
    <string name="settings_subtitle">Choose whether the app can send SMS reminders.</string>
    <string name="sms_note">Enable this setting to allow SMS notifications for weight tracking reminders.</string>
    <string name="register_subtitle">Create an account to save your weight tracking entries.</string>
</resources>
